--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,34 @@
+@font-face {
+    font-family: 'Friz Quadrata Regular';
+    src: url('../fonts/Friz_Quadrata_Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Friz Quadrata Bold';
+    src: url('../fonts/Friz_Quadrata_Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Friz Quadrata Italic';
+    src: url('../fonts/Friz_Quadrata_Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Friz Quadrata Medium';
+    src: url('../fonts/Friz_Quadrata_Std_Medium.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Friz Quadrata Regular', sans-serif;
 }
 
 header {
@@ -67,6 +95,7 @@ nav a.active {
 section {
     padding: 2rem;
 }
+
 .searchbar {
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -134,4 +163,3 @@ section {
     background-color: #818FDC;
     color: white;
 }
-
